--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
   <script src="./react-dom.development.js"></script> 
   <script src="./babel.min.js"></script> 
   <link rel="stylesheet" href="./styles.css">
-  <title>Reac01 : starter</title>
+  <title> Homework : Reac01 </title>
 </head>
 <body>
   <div id="root">
